--- a/src/my-documents.pug
+++ b/src/my-documents.pug
@@ -96,6 +96,55 @@ html(lang="en")
                                                 img(src="@img/alphabank.png", alt="" draggable="false") 
                                             .cabinet__documents-payment-item 
                                                 img(src="@img/nalichka.png", alt="" draggable="false") 
+                            .cabinet__item 
+                                .cabinet__top 
+                                    p.cabinet__top-title Мои документы:
+                                    .cabinet__top-right 
+                                        a(href="#!").cabinet__top-btn Заказать оригиналы документов
+                                        button(type='button').cabinet__top-q ? 
+                                .cabinet__docs 
+                                    p.cabinet__docs-title Документов имеется: <span>66</span>
+                                    .cabinet__docs-content 
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                        .cabinet__docs-item 
+                                            img(src="@img/document.png", alt="" draggable="false")
+                                    .cabinet__docs-bot 
+                                        a(href="#!").cabinet__docs-bot-btn.active Показать все документы → 
+                                        a(href="#!").cabinet__docs-bot-btn Показать архив →
+                                    p.cabinet__docs-title Ваши публикации: <span>66</span>
+                                    .cabinet__docs-post 
+                                        a(href="#!").cabinet__docs-post-link Информация по сборнику 
+                                        .cabinet__docs-post-img 
+                                            img(src="@img/post.png", alt="" draggable="false")
+                                        a(href="#!").cabinet__docs-post-btn Скачать свидельство 
+                                        a(href="#!").cabinet__docs-post-download Скачать справку 
             include components/footer 
             +footer
         script(src="js/app.min.js") 
