--- a/src/scss/layout/_cabinet.scss
+++ b/src/scss/layout/_cabinet.scss
@@ -1,11 +1,12 @@
 .cabinet{
     @include res('margin-top', -223px);
     @include res('min-height', 900px);
-    @include res('padding-bottom', 50px);
+    @include res('padding-bottom', 25px);
     position: relative;
     z-index: 5;
     @include media(576){
         margin-top: 0;
+        @include resa('padding-bottom', 25px);
     }
     &__body{
         display: flex;
@@ -85,6 +86,12 @@
     &__content{
         width: 100%;
         flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+        @include res('gap', 25px);
+        @include media(576){
+            @include resa('gap', 20px);
+        }
     }
     &__item{
         @include res('border-radius', 30px);
@@ -92,8 +99,8 @@
         box-shadow: 0px 0px .5208333333vw 0px rgba(2, 2, 2, 0.10);
         @include res('padding-top', 25px);
         @include res('padding-bottom', 50px);
-        @include res('padding-left', 30px);
-        @include res('padding-right', 30px);
+        @include res('padding-left', 29px);
+        @include res('padding-right', 29px);
         @include media(576){
             border-radius: 0;
             box-shadow: none;
@@ -564,6 +571,206 @@
                     height: 100%;
                     object-fit: cover;
                 }
+            }
+        }
+    }
+    &__top{
+        border-bottom: solid rgba(37, 37, 37, 0.10);
+        @include res('border-width', 1px);
+        @include res('padding-bottom', 25px);
+        @include res('margin-bottom', 22px);
+        @include res('margin-left', -29px);
+        @include res('margin-right', -29px);
+        @include res('padding-left', 29px);
+        @include res('padding-right', 29px);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        &-title{
+            color: #1D1D1D;
+            @include res('font-size', 26px);
+            font-style: normal;
+            font-weight: 800;
+            line-height: 138.462%;
+        }
+        &-right{
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            @include res('gap', 7px);
+        }
+        &-btn{
+            color: #325CFE;
+            text-align: center;
+            text-decoration: none;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 140%;
+            border: solid #325CFE;
+            @include res('font-size', 12px);
+            @include res('padding-left', 15px);
+            @include res('padding-right', 15px);
+            @include res('border-radius', 8px);
+            @include res('border-width', 1px);
+            @include res('min-height', 38px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 300ms ease-out, color 300ms ease-out;
+            &:hover{
+                background: #325CFE;
+                color: #fff;
+            }
+        }
+        &-q{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            @include res('width', 26px);
+            @include res('min-width', 26px);
+            @include res('height', 26px);
+            @include res('border-radius', 6px);
+            color: rgba(255, 255, 255, 0.60);
+            text-align: center;
+            background: rgba(50, 92, 254, 0.50);
+            @include res('font-size', 22px);
+            font-style: normal;
+            font-weight: 700;
+            line-height: 128.333%;
+        }
+    }
+    &__docs{
+        &-title{
+            color: #1D1D1D;
+            @include res('font-size', 20px);
+            font-style: normal;
+            font-weight: 500;
+            line-height: 130%;
+            @include res('margin-bottom', 20px);
+            span{
+                color: #325CFE;
+                font-weight: 800;
+            }
+        }
+        &-content{
+            display: flex;
+            flex-wrap: wrap;
+            @include res('gap', 18px);
+            @include res('padding-bottom', 38px);
+        }
+        &-item{
+            @include res('width', 150px);
+            @include res('height', 182px);
+            @include res('border-radius', 10px);
+            line-height: 0;
+            overflow: hidden;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+        &-bot{
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            @include res('gap', 27px);
+            @include res('padding-top', 14px);
+            @include res('padding-bottom', 14px);
+            border-top: solid rgba(37, 37, 37, 0.10);
+            border-bottom: solid rgba(37, 37, 37, 0.10);
+            @include res('border-width', 1px);
+            @include res('margin-left', -29px);
+            @include res('margin-right', -29px);
+            @include res('padding-left', 29px);
+            @include res('padding-right', 29px);
+            @include res('margin-bottom', 38px);
+            &-btn{
+                color: rgba(50, 92, 254, 0.50);
+                @include res('font-size', 18px);
+                font-style: normal;
+                font-weight: 500;
+                line-height: 213.889%;
+                text-decoration: none;
+                &.active{
+                    color: #325CFE;
+                    font-weight: 700;
+                }
+            }
+        }
+        &-post{
+            @include res('border-radius', 10px);
+            background: #FFF;
+            box-shadow: 0px 0px .5208333333vw 0px rgba(2, 2, 2, 0.10);
+            @include res('padding-top', 10px);
+            @include res('padding-bottom', 12px);
+            @include res('padding-left', 20px);
+            @include res('padding-right', 20px);
+            width: max-content;
+            display: flex;
+            flex-direction: column;
+            &-link{
+                color: #325CFE;
+                text-align: center;
+                @include res('font-size', 12px);
+                @include res('margin-bottom', 4px);
+                font-style: normal;
+                font-weight: 500;
+                line-height: 166.667%;
+                text-decoration-line: underline;
+            }
+            &-img{
+                @include res('width', 160px);
+                @include res('height', 113px);
+                @include res('margin-bottom', 6px);
+                @include res('border-radius', 10px);
+                overflow: hidden;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            &-btn{
+                background: #325CFE;
+                color: #fff;
+                text-align: center;
+                @include res('font-size', 12px);
+                font-style: normal;
+                font-weight: 500;
+                line-height: 140%;
+                @include res('height', 38px);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                @include res('padding-left', 10px);
+                @include res('padding-right', 10px);
+                @include res('border-radius', 8px);
+                transition: 300ms ease-out;
+                width: 100%;
+                @include res('margin-bottom', 6px);
+                transition: background 300ms ease-out;
+                text-decoration: none;
+                @include media(576){
+                    @include resa('font-size', 12px);
+                    @include resa('height', 35px);
+                    @include resa('padding-left', 10px);
+                    @include resa('padding-right', 10px);
+                    @include resa('border-radius', 8px);
+                    @include resa('border-width', 1px);
+                    @include resa('margin-bottom', 5px);
+                }
+                &:hover{
+                    background: #4b70fe;
+                }
+            }
+            &-download{
+                color: #325CFE;
+                text-align: center;
+                @include res('font-size', 12px);
+                @include res('margin-bottom', 4px);
+                font-style: normal;
+                font-weight: 500;
+                line-height: 166.667%;
+                text-decoration-line: underline;
             }
         }
     }
